--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,4 @@
 PORT=3001
 MONGO_DB=mongodb+srv://dkttravel:Td5CtXocW534pUBn@cluster0.nyoileh.mongodb.net/?retryWrites=true&w=majority
+ACCESS_TOKEN= access_token
+REFRESH_TOKEN= refresh_token
